# Cohert_Final

Backend/: main.py  pyproject.toml
smart-subscription/: README.md  main.py  pyproject.toml  requirements.txt  test_db.py  test_db2.py  test_pymongo.py  view_db.py
smart-subscription/backend/: app.py  config.py
smart-subscription/backend/middleware/: auth_middleware.py
smart-subscription/backend/models/: Inventory.py  Order.py  OrderItem.py  Plan.py  Preference.py  Reward.py  Subscription.py  User.py
smart-subscription/backend/routes/: admin_routes.py  auth_routes.py  order_routes.py  plan_routes.py  reward_routes.py  staff_routes.py  subscription_routes.py  user_routes.py
smart-subscription/frontend/: admin.html  checkout.html  dashboard.html  index.html  plans.html  staff-dashboard.html  upcoming-box.html
smart-subscription/frontend/css/: style.css
smart-subscription/frontend/js/: api.js
smart-subscription/frontend/user/: login.html  preference-quiz.html  register.html
